--- a/_posts/2017-10-02-2017强网杯线下AWD总结.md
+++ b/_posts/2017-10-02-2017强网杯线下AWD总结.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "2017强网杯线下AWD攻击+防御"
+title: "2017强网杯线下AWD攻击&防御"
 date: 2017-10-02
 description: "强网杯线下AWD攻防"
 tag: AWD
@@ -145,7 +145,7 @@ PS:因为直接上传的话phtml可能不行，他会判断是不是图片.<br/>
 
 这里就不演示了
 
-### 防御
+### 防御篇
 
 ### 1.修改代码
 
