--- a/_posts/2018-05-13-折腾笔记的诞生.md
+++ b/_posts/2018-05-13-折腾笔记的诞生.md
@@ -8,7 +8,7 @@ tag: 吹水文
 ---
 
 
-**题记**
+**题记：**
 
 想着这么久没有更新博客了，今天心血来潮突然就想学习了
 
@@ -24,6 +24,6 @@ tag: 吹水文
 
 所以这个折腾笔记就已经开始诞生了，<br/>
 
-没有折腾，哪来精彩人生。
+没有折腾，哪来精彩人生？？？
 
 ---
