--- a/_posts/2018-05-14-win服务器安全--多个DOS命令的使用.md
+++ b/_posts/2018-05-14-win服务器安全--多个DOS命令的使用.md
@@ -32,17 +32,19 @@ tag: 折腾笔记
 
 ### 1. dir命令
 
-<h2>常用参数</h2>
+<h2>常用参数：</h2>
 
-/A --仅显示A参数表中指定的文件<br/>
+/A  -- 仅显示A参数表中指定的文件<br/>
 
-/S --显示指定目录及所有子目录中文件<br/>
+/S  -- 显示指定目录及所有子目录中文件<br/>
 
-/W -- 以“横”方式排列显示<br/>
+/W  -- 以“横”方式排列显示<br/>
 
-/P -- 每显示满一屏停顿一下，待用户按任意键后再继续显示下一屏（在多文件的时候可以使用这一方法）<br/>
+/P  -- 每显示满一屏停顿一下，待用户按任意键后再继续显示下一屏（在多文件的时候可以使用这一方法）<br/>
 
-**下面进行命令演示***
+
+
+**下面进行命令演示**
 
 ```
 dir /a
@@ -50,47 +52,58 @@ dir /a
 
 ![images](/images/2018-05-13/dos01.png)
 
+
 ```
 dir /s
 ```
 /S 参数多了一个显示所有文件总数，感觉跟 /a 参数没多大区别
 
+
 ![images](/images/2018-05-13/dos02.png)
+
 
 ```
 dir /w
 ```
 文件横着排列，而不是竖着排
 
+
 ![images](/images/2018-05-13/dos03.png)
+
 
 ```
 dir /p
 ```
+
 在目录文件多的时候，可以使用这个命令来进行页条分析
 
+
 ![images](/images/2018-05-13/dos04.png)
+
+---
 
 
 ### 2. copy和xcopy命令
 
-**copy只能拷贝XX文件夹下的文件，不能拷贝XX文件夹下的文件夹**</br>
+**copy只能拷贝XX文件夹下的文件，不能拷贝XX文件夹下的文件夹**
 
-**xcopy能拷贝XX文件夹下的所有文件，包括文件夹**</br>
+**xcopy能拷贝XX文件夹下的所有文件，包括文件夹**
 
-<h3>常用参数</h3></br>
 
-**（注：使用copy命令时不需要参数）**</br>
+<h3>常用参数：</h3>
 
-/S --复制目录和子目录，除了空的</br>
+**（注：使用copy命令时不需要参数）**
 
-/E --复制目录和子目录，包括空的</br>
+/S --复制目录和子目录，除了空的
 
-/W --提示您在复制前按键</br>
+/E --复制目录和子目录，包括空的
 
-/C --即使有错误，也继续复制</br>
+/W --提示您在复制前按键
 
-/H 也复制隐藏和系统文件</br>
+/C --即使有错误，也继续复制
+
+/H 也复制隐藏和系统文件
+
 
 <h3>演示一下</h3>
 
@@ -103,16 +116,22 @@ copy C:\ D:\
 
 可以看到，只能复制文件，不能复制“演示1”，“演示2”文件夹
 
+
 ![images](/images/2018-05-13/dos05.png)
+
 
 ```
 xcopy C:\ D:\
 ```
+
 表示复制C盘的所有文件到D盘，包括文件夹<br/>
 
 这里使用相同的命令复制文件，唯一不同的是，xcopy需要使用参数，这里使用 **/E /H**参数<br/>
 
+
 ![images](/images/2018-05-13/dos06.png)
+
+---
 
 
 ### 3. del、deltree和rd命令
@@ -123,11 +142,13 @@ xcopy C:\ D:\
 
 **rd删除空文件夹**<br/>
 
-<h3>常用参数</h3><br/>
+
+<h3>常用参数</h3>
 
 /S --删除下级文件夹和所有文件<br/>
 
 /q --安静模式，不提示<br/>
+
 
 <h3>演示</h3><br/>
 
@@ -140,7 +161,9 @@ del C:\
 
 加上“/q”参数的话，就不会出现让你确认删除的提示，默认全部删除<br/>
 
+
 ![images](/images/2018-05-13/dos07.png)
+
 
 ```
 deltree C:\
@@ -163,18 +186,23 @@ rd C:\123\321
 ```
 (注：演示02为空文件夹，同样，如果加“/s”参数的话，路径所在的文件夹将被删除，不是空文件夹也会被删)
 
+
 ![images](/images/2018-05-13/dos08.png)
+
+---
 
 
 ### 4. move命令
 
 **move命令可以移动一个或者多个文件，他跟copy很相似，区别在于，copy是复制，文件move是移动文件**<br/>
 
+
 <h3>常用参数</h3>
 
 /Y --移动目标文件夹内有相同名字的文件时，不会提示，默认覆盖<br/>
 
 /-Y --与之相反，会提示
+
 
 <h3>演示</h3>
 
@@ -183,18 +211,22 @@ move /y C:\1.txt D:\
 ```
 注：移动C盘里面的1.txt文件到D盘,“/y”参数表示不提示
 
+
 ![images](/images/2018-05-13/dos09.png)
+
+---
 
 
 ### 5. attrib命令
 
-**attrib命令用于解决因病毒导致所有文件夹被隐藏的问题，它可以修改文件的属性**<br/>
+**attrib命令用于解决因病毒导致所有文件夹被隐藏的问题，它可以修改文件的属性**
+
 
 <h3>常用参数</h3><br/>
 
-+  --表示设置属性。<br/>
+"+"  --表示设置属性。<br/>
 
--  --表示清除属性。<br/>
+"-"  --表示清除属性。<br/>
 
 R  --表示只读文件属性。<br/>
 
@@ -204,6 +236,7 @@ S  --表示系统文件属性。<br/>
 
 H  --表示隐藏文件属性。<br/>
 
+
 <h3>使用方法</h3>
 
 ```
@@ -211,14 +244,17 @@ attrib -r -a -s -h C:\abc
 ```
 “-”号表示清除属性，abc为文件夹名，这个命令也可以修改文件的属性，换成“+”则是设置属性
 
+---
+
 
 ### 6. netstat命令
 
 **netstat命令用于查看网络连接、接口等信息**<br/>
 
-<h3>常用参数</h3><br/>
 
--a 显示所有连接和侦听端口。<br/>
+<h3>常用参数</h3>
+
+-a 显示所有连接和侦听端口。
 
 -c 每隔1秒就重新显示一遍，直到用户中断它。<br/>
 
@@ -250,6 +286,7 @@ attrib -r -a -s -h C:\abc
 
 -y 显示所有连接的 TCP 连接模板。无法与其他选项结合使用<br/>
 
+
 <h3>演示</h3>
 
 ```
@@ -257,7 +294,10 @@ netstat -an
 ```
 可以多个参数一起使用
 
+
 ![images](/images/2018-05-13/dos10.png)
+
+---
 
 
 ### 7. mstsc命令
@@ -272,38 +312,41 @@ netstat -an
 开始运行 -> mstsc
 ```
 
+---
+
 
 ### 8. 用户添加命令
 
-**查看本地用户**
+**1. 查看本地用户**
 ```
 net user
 ```
 
-**添加一个用户名为abc，密码为123的用户**
+**2. 添加一个用户名为abc，密码为123的用户**
 ```
 net user abc 123 /add
 ```
 
-**添加一个用户名为abc，密码为123的用户**
+**3. 添加一个用户名为abc，密码为123的用户**
 ```
 net user abc 123 /add
 ```
 
-**加入管理员组**
+**4. 加入管理员组**
 ```
 net localgroup administrator abc /add
 ```
 
-**激活禁用的用户**
+**5. 激活禁用的用户**
 ```
 net user abc /active:yes
 ```
 
-**删除用户名为abc的用户**
+**6. 删除用户名为abc的用户**
 ```
 net user abc /del
 ```
+
 
 <h3>常用参数</h3>
 
