--- a/_posts/2017-09-20-2017蓝盾杯Kali部分WP.md
+++ b/_posts/2017-09-20-2017蓝盾杯Kali部分WP.md
@@ -3,7 +3,7 @@ layout: post
 title: "2017蓝盾杯Kali部分Writeup"
 date: 2017-09-20
 description: "蓝盾杯Writeup"
-tag: CTF-Writeup
+tag: CTF
 ---
 ---
 
@@ -24,7 +24,7 @@ ip：192.168.30.20
 nmap -sV -PN 192.168.30.20
 ![images](/images/2017-09-20/ld3.png)
 
-第一题的题目提示是ftp，那么使用msf尝试若口令破解<br/>
+第一题的题目提示是ftp，那么使用msf尝试弱口令破解<br/>
 user.txt
 
 ![images](/images/2017-09-20/ld4.png)
