--- a/_posts/2018-05-14-Windows安全应急--多种安全工具的介绍.md
+++ b/_posts/2018-05-14-Windows安全应急--多种安全工具的介绍.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: "（二）Windows服务器安全--多种安全工具的介绍"
+title: "（二）Windows安全应急--多种安全工具的介绍"
 date: 2018-05-14
-description: "Windows服务器应急笔记"
+description: "应急响应（Windows篇）"
 tag: 折腾笔记
 ---
 ---
