--- a/_posts/2018-05-30-应急响应--在应急响应中需要了解的信息.md
+++ b/_posts/2018-05-30-应急响应--在应急响应中需要了解的信息.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: "（三）Windows服务器安全--在应急响应中需要知道的信息"
+title: "（三）Windows安全应急--在应急响应中需要知道的信息"
 date: 2018-05-19
-description: "Windows服务器应急笔记"
+description: "应急响应（Windows篇）"
 tag: 折腾笔记
 ---
 ---
