--- a/_posts/2018-05-30-应急响应--在应急响应中需要了解的信息.md
+++ b/_posts/2018-05-30-应急响应--在应急响应中需要了解的信息.md
@@ -3,7 +3,7 @@ layout: post
 title: "（三）Windows安全应急--在应急响应中需要知道的信息"
 date: 2018-05-19
 description: "应急响应（Windows篇）"
-tag: 折腾笔记
+tag: 应急响应（Windows篇）
 ---
 ---
 
