--- a/_posts/2018-07-10-Windows安全应急--应急排查方法.md
+++ b/_posts/2018-07-10-Windows安全应急--应急排查方法.md
@@ -3,11 +3,11 @@ layout: post
 title: "（四）Windows安全应急--应急排查的一些方法"
 date: 2018-07-10
 description: "应急响应（Windows篇）"
-tag: AWD
+tag: 应急响应（Windows篇）
 ---
 ---
 
-**且随疾风前行。。**<br>
+**且随疾风前行，**<br>
 
 ---
 
@@ -19,7 +19,7 @@ tag: AWD
 
 总会需要大大小小的问题，，<br/>
 
-就像成长一样，，，<br/>
+就像成长一样。<br/>
 
 ---
 
@@ -83,7 +83,7 @@ tag: AWD
 
 ### NO.2 检查登录日志，任务计划，开机启动项
 
-1. 检查有没有异常登录情况，<br/>
+**1.检查有没有异常登录情况**
 
 控制面板 -> 查看事件日志 -> Windows日志 -> 安全<br/>
 
@@ -96,7 +96,7 @@ tag: AWD
 
 ------
 
-2. 任务计划
+**2.任务计划**
 
 主要目的是检查攻击者有没有设置定时任务运行恶意程序，<br>
 
@@ -109,7 +109,7 @@ tag: AWD
 
 -------
 
-3. 开机启动项
+**3.开机启动项**
 
 这个好像没什么好解释了，<br>
 
@@ -129,7 +129,7 @@ tag: AWD
 
 ### NO.3 检查活动文件
 
-1. 用户桌面文件
+**1.用户桌面文件**
 
 只要攻击者创建用户，或者用administrator账号在服务器上活动，就会留下痕迹。<br>
 
@@ -149,7 +149,7 @@ tag: AWD
 
 -------
 
-2. 下载文件
+**2.下载文件**
 
 **C:\Documents and Settings\cracker\桌面**<br>
 
@@ -168,7 +168,7 @@ https://jingyan.baidu.com/article/c910274bc7530acd361d2dca.html
 
 ---------
 
-3. 用户的网络访问情况
+**3.用户的网络访问情况**
 
 C:\Documents and Settings\cracker\Cookies<br>
 
@@ -178,7 +178,7 @@ C:\Documents and Settings\cracker\Cookies<br>
 
 ------------
 
-4. 程序安装的临时文件
+**4.程序安装的临时文件**
 
 C:\Documents and Settings\cracker\Local Settings\Temp<br>
 
@@ -186,7 +186,7 @@ C:\Documents and Settings\cracker\Local Settings\Temp<br>
 
 ------------
 
-5. 最近浏览痕迹
+**5.最近浏览痕迹**
 
 C:\Documents and Settings\cracker\Recent<br>
 
@@ -194,7 +194,7 @@ C:\Documents and Settings\cracker\Recent<br>
 
 ----------
 
-6. 上网的历史记录
+**6.上网的历史记录**
 
 C:\Documents and Settings\cracker\Local Settings\History<br>
 
@@ -202,7 +202,7 @@ C:\Documents and Settings\cracker\Local Settings\History<br>
 
 -----------
 
-7. 临时文件
+**7.临时文件**
 
 C:\Documents and Settings\cracker\Local Settings\Temporary Internet Files<br>
 
@@ -222,6 +222,12 @@ C:\Documents and Settings\cracker\Local Settings\Temporary Internet Files<br>
 
 ![images](/images/2018-07-10/jy09.png)
 ---
+
+关于注册表隐藏用户可以看看这里
+
+```
+https://www.cnblogs.com/wjvzbr/p/7906855.html
+```
 
 -------
 
