--- a/_posts/2018-07-20-如果我能告诉你.md
+++ b/_posts/2018-07-20-如果我能告诉你.md
@@ -7,18 +7,18 @@ tag: 随心笔记
 ---
 ---
 
-起风了，风一定来自何处，<br>
+**起风了，风一定来自何处，**<br>
 
-也许玫瑰热切盼望生长，<br>
+**也许玫瑰热切盼望生长，**<br>
 
-这幻景也无比希冀留驻；<br>
+**这幻景也无比希冀留驻；**<br>
 
-如果我能告诉你，我一定会让你知道。<br>
+**如果我能告诉你，我一定会让你知道。**<br>
 
-或许所有的狮子都起身离畔，<br>
+**或许所有的狮子都起身离畔，**<br>
 
-所有的溪流和士兵都将流散；<br>
+**所有的溪流和士兵都将流散；**<br>
 
-时间默默不语但我曾与你倾述？<br>
+**时间默默不语但我曾与你倾述？**<br>
 
-如果我能告诉你，我一定会让你知道。<br>
+**如果我能告诉你，我一定会让你知道。**<br>
